<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">TCG Deck Builder And Manager</string>

    <string name="text1">Temp Landing activity text view</string>
    <string name="text2">Temp Cards activity text view. There are no cards yet :(</string>
    <string name="button1">Temp button 1</string>
    <string name="button2">Temp button 2</string>
    <string name="button3">Temp button 3</string>

    <string name="add_card">Add a card?</string>
    <string name="create_card">Create \nCard!</string>

    <string name="add_card_shpeal"> Welcome to the add a card page! \n
        \nNote: By filling out this page properly, you\'ll be able to add a new card to the database! \n
        \nQuick reminder that most of these edit texts need to be filled out except for effect and description
    </string>

    <string name="hint_cardName">Name…</string>
    <string name="hint_setNum">Set #?</string>
    <string name="hint_setMonNum">Set Mon #?</string>
    <string name="hint_rpsType">1, 2, or 3…</string>
    <string name="hint_type"> 1 or 2…</string>
    <string name="hint_subType">1 or 2…</string>
    <string name="hint_power">Any # * 100 </string>
    <string name="hint_slots">Any #</string>
    <string name="hint_dupes">Dupes Allowed?</string>
    <string name="hint_legal">Is legal?</string>
    <string name="hint_effect">If there\'s a effect, make sure to put it here!</string>
    <string name="hint_description">If there\'s a description, make sure to put it here!</string>

    <string name="hint_username">Username…</string>
    <string name="hint_password">Password…</string>
    <string name="hint_password2">Same password as earlier…</string>
    <string name="create_user_button"> Create account?</string>
    <string name="new_account">New account?</string>
    <string name="log_in_button">Log in?</string>

    <string name="create_button">Create</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>

    <string name="button_save">Save</string>
    <string name="empty_not_saved">Card is not saved because of some error within the card creation </string>
    <string name="no_cards_message">No cards yet, time to make some!</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="logout">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bees">bees</string>
    <string name="back_button">Back</string>

</resources>