<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/textViewLandingPage"
        android:layout_width="267dp"
        android:layout_height="125dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewCardsButton"
        android:layout_width="@dimen/landingBigButtonWidth"
        android:layout_height="@dimen/landingBigButtonHeight"
        android:layout_marginTop="60dp"
        android:text="@string/button1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLandingPage" />

    <Button
        android:id="@+id/viewDecksButton"
        android:layout_width="@dimen/landingBigButtonWidth"
        android:layout_height="@dimen/landingBigButtonHeight"
        android:layout_marginTop="32dp"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCardsButton" />

    <Button
        android:id="@+id/viewAccountsButton"
        android:layout_width="@dimen/landingBigButtonWidth"
        android:layout_height="@dimen/landingBigButtonHeight"
        android:layout_marginTop="32dp"
        android:text="@string/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDecksButton" />

    <Button
        android:id="@+id/landingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>